# c64-ultimate-mcp

./: .env.example  .gitignore  AGENT_QUICK_REFERENCE.md  BASIC_WORKFLOW.md  FIXES_SUMMARY.md  LICENSE  README.md  TOKENIZER_FIX_REPORT.md  mcp_config.json  pyproject.toml  requirements.txt  test_basic_workflow.py  test_ftp_upload.py
.github/: copilot-instructions.md
examples/: README.md  border.bas  border.prg  comprehensive_demo.bas  comprehensive_demo.prg  hello.asm  raster_bars.asm  scroller.bas  scroller.prg  sid_music.bas  sid_music.prg  sprite_bounce.bas  sprite_bounce.prg
examples/sta64_bbs_bitmap/: bitmap.inc  loader.bas  loader.prg  manifest.json  report.json  report.txt
examples/sta64_bbs_hires/: manifest.json  report.json  report.txt
src/: __init__.py  assembler.py  c64_ultimate_mcp.py  tokenizer.py
src/graphics/: __init__.py  __main__.py  cli.py  constants.py  converter.py  manifest.py  palette.py  report.py
src/graphics/emitters/: __init__.py  asm.py  basic.py
src/graphics/encoders/: __init__.py  bitmap_hires.py  bitmap_multicolor.py  sprite.py
tests/: test_graphics_bitmap.py  test_graphics_sprites.py
