[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c64-ultimate-mcp"
version = "0.2.1"
description = "Model Context Protocol server for Commodore 64 Ultimate development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "azcoigreach"}
]
keywords = ["mcp", "commodore64", "c64", "ultimate", "retro", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "c64img>=3.5",
]

[project.urls]
Homepage = "https://github.com/azcoigreach/c64-ultimate-mcp"
Documentation = "https://github.com/azcoigreach/c64-ultimate-mcp#readme"
Repository = "https://github.com/azcoigreach/c64-ultimate-mcp"
Issues = "https://github.com/azcoigreach/c64-ultimate-mcp/issues"

[project.scripts]
c64-ultimate-mcp = "c64_ultimate_mcp:main"
c64-ultimate-mcp-graphics = "graphics.cli:main"[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["c64_ultimate_mcp", "assembler", "tokenizer"][tool.setuptools.packages.find]
where = ["src"]
include = ["graphics*"]